--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "calvincrush",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -13,18 +14,28 @@
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "expo": "~53.0.12",
+    "expo-auth-session": "~6.2.1",
+    "expo-image-picker": "~16.1.4",
+    "expo-secure-store": "~14.2.3",
     "expo-status-bar": "~2.2.3",
+    "expo-web-browser": "~14.2.0",
     "lodash": "^4.17.21",
     "react": "19.0.0",
     "react-native": "0.79.4",
     "react-native-deck-swiper": "^2.0.18",
+    "react-native-draggable-flatlist": "^4.0.3",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1"
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "^15.12.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-native-svg-transformer": "^1.5.1"
+  },
+  "metro": {
+    "config": "metro.config.cjs"
   },
   "private": true
 }
